--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (2021).docx">
+                    <a class="btn btn-xl btn-outline-light" href="./assets/ChristopherButcherResume.docx">
                         <i class="fas fa-download mr-2"></i>
                         Download My Resume
                     </a>
@@ -128,7 +128,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Survival Shooter Template Soundtrack</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="Brightly-colored zombified creatures approach a child in a miniature world" />
+                            <img class="img-fluid" src="./assets/img/portfolio/sss_FMOD_01.png" alt="Brightly-colored zombified creatures approach a child in a miniature world" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -137,7 +137,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Gridworld</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/Gridworld1.JPG" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
+                            <img class="img-fluid" src="./assets/img/portfolio/gw_02.png" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -191,7 +191,7 @@
                     <div class="row">
                         <div class="col-lg-1"></div>
                         <div class="col-lg-5">
-                            <iframe style="border: 4px solid #e0f0df; border-radius: 4px; width: 100%; height: 300px; padding-right: 0px;" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
+                            <iframe style="border: 4px solid #e0f0df; border-radius: 4px; width: 100%; height: 300px; padding-right: 0px;" title="Christopher Butcher Music Player" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
                         </div>
                         <div class="col-lg-5 youtube">
                             <iframe width="100%" height="300" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/CQfkxlim5DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -255,42 +255,7 @@
                         <div class="form-group"><button class="btn btn-primary btn-xl" type="submit">Send</button></div>
                     </form>
                 </div>
-                
-                    <!-- </form>
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label>
-                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label>
-                                    <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label>
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <br />
-                            <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                        </form> -->
-                    
+
                 </div>
             </div>
         </section>
@@ -311,7 +276,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a> -->
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/chrstphrbtchr"><i class="fab fa-fw fa-twitter" target="blank"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/chrstphrbtchr"><i class="fab fa-fw fa-twitter" target="blank" role="img" aria-label="Twitter icon"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/-christopherbutcher/" target="blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://bitbucket.org/christopherbutcher/" target="blank"><i class="fab fa-fw fa-bitbucket"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="mailto:christopher@christopherbutcher.com"><i class="fas fa-envelope"></i></a>
@@ -655,7 +620,30 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Gridworld1.JPG" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/Gridworld1.JPG" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone" /> -->
+                                    <div id="carouselExampleControls5" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/GW_02.png" class="d-block w-100 rounded " alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/GW_01.png" class="d-block w-100 rounded" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                          </div>
+                                          <!--Copy and Repeat this part for more carousel images-->
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/gw_code_01.png" class="d-block w-100 rounded" alt="code">
+                                          </div>
+                                          <!-- end copy here-->
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls5" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls5" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"><i></i></p>
                                     <p class="mb-5"></p>
