--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@
                                     <div id="carouselExampleControls5" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img src="./assets/img/portfolio/GW_02.png" class="d-block w-100 rounded " alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                            <img src="./assets/img/portfolio/gw_02.png" class="d-block w-100 rounded " alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/GW_01.png" class="d-block w-100 rounded" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                            <img src="./assets/img/portfolio/gw_01.png" class="d-block w-100 rounded" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
                                           </div>
                                           <!--Copy and Repeat this part for more carousel images-->
                                           <div class="carousel-item">
@@ -676,7 +676,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Out of the Void</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Survival Shooter Soundtrack</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -684,7 +684,30 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
+                                    <!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" /> -->
+                                    <div id="carouselExampleControls6" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img src="./assets/img/portfolio/sss_FMOD_01.png" class="d-block w-100 rounded " alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/sss_01.png" class="d-block w-100 rounded" alt="a single sheep appears in a larger grid of different textures, such as grass, water, and stone">
+                                          </div>
+                                          <!--Copy and Repeat this part for more carousel images-->
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/sss_01.png" class="d-block w-100 rounded" alt="code">
+                                          </div>
+                                          <!-- end copy here-->
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls6" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls6" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5 text-justify">Alan please add detail.</p><!-- HEY LOOK! UPDATE THIS!!!!!-->
                                     <button class="btn btn-primary" data-dismiss="modal">
