added demo reel. hopefully improved video sizing. updated resume

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="./assets/ChristopherButcherResume.docx">
+                    <a class="btn btn-xl btn-outline-light" href="./assets/ChristopherButcherResume2021.docx">
                         <i class="fas fa-download mr-2"></i>
                         Download My Resume
                     </a>
@@ -191,10 +191,13 @@
                     <div class="row">
                         <div class="col-lg-1"></div>
                         <div class="col-lg-5">
-                            <iframe style="border: 4px solid #e0f0df; border-radius: 4px; width: 100%; height: 300px; padding-right: 0px;" title="Christopher Butcher Music Player" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
+                            <h5>Game Audio Reel</h5>
+                            <iframe width="100%" height="350" class="youtube" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/yXzKfyxl-O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            
                         </div>
-                        <div class="col-lg-5 youtube">
-                            <iframe class="iframeFix" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/CQfkxlim5DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="col-lg-5 ">
+                            <h5>Original Video Game Soundtrack(s)</h5>
+                            <iframe width="100%" height="350" style="border: 4px solid #e0f0df; border-radius: 4px;  padding-right: 0px;"  title="Christopher Butcher Music Player" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
                         </div>
                         <div class="col-lg-1"></div>
                     </div>
@@ -386,7 +389,7 @@
                                     <h4>Audio</h4>
                                     <p class="mb-5 text-justify">
                                         <img src="./assets/img/portfolio/bos_FMOD_02.png" alt="page of written code" width="100%" height="auto" />
-                                        In <i>Breach of Space</i>, it's important to alert the player to world changes through multiple means, especially the music. Each non-diegetic musical piece must be written with at least two distinct levels of intensity (though for some, there might be three or four, such as in <a href="https://christopherbutcher.bandcamp.com/track/greetings-from-null" style="text-decoration: underline;">"Greetings from NULL"</a> pictured above). These "versions" are switched between as the player character is seen/pursued by the Robotic staff, but can also adapt based on the success of an objective (such as hacking a forcefield) or even the safety of the player.
+                                        In <i>Breach of Space</i>, it's important to alert the player to world changes through multiple means, especially the music. Each non-diegetic musical piece must be written with at least two distinct levels of intensity (though for some, there might be three or four, such as in <a href="https://christopherbutcher.bandcamp.com/track/greetings-from-null" style="text-decoration: underline;" target="_blank">"Greetings from NULL"</a> pictured above). These "versions" are switched between as the player character is seen/pursued by the Robotic staff, but can also adapt based on the success of an objective (such as hacking a forcefield) or even the safety of the player.
                                     </p>
                                     <h4>Learn More:</h4><p></p>
                                         <!-- <a href="./pages/bos_contributions.html" target="blank"><button class="btn btn-primary">
@@ -748,7 +751,7 @@
                                     <p class="mb-5 text-justify">
                                         The sound effects for each enemy also reflect the materials they are made of as well as warped versions of their real-world counterparts (such as glitched Furby & Teddy Ruxpin sounds for the Zombears combined with the sound of breaking cassette tapes & muffled hits).
                                     </p>
-                                    <iframe  width="100%" class="iframeFix" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/CQfkxlim5DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+                                    <iframe  class="iframeFix" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/CQfkxlim5DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
