--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
                     </div>
                     <div class="col-lg-1"></div>
                 </div>
-                    <div class="row">
+                    <div class="row align-items-end">
                         <div class="col-lg-1"></div>
                         <div class="col-lg-5">
                             <h5>Game Audio Reel</h5>
-                            <iframe width="100%" height="350" class="youtube" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/yXzKfyxl-O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="100%" height="350" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/yXzKfyxl-O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             
                         </div>
-                        <div class="col-lg-5 ">
+                        <div class="col-lg-5 youtube">
                             <h5>Original Video Game Soundtrack(s)</h5>
                             <iframe width="100%" height="350" style="border: 4px solid #e0f0df; border-radius: 4px;  padding-right: 0px;"  title="Christopher Butcher Music Player" src="https://bandcamp.com/EmbeddedPlayer/album=2408887354/size=large/bgcol=333333/linkcol=fe7eaf/artwork=small/transparent=true/" seamless><a href="https://christopherbutcher.bandcamp.com/album/portfolio-demos">Portfolio Demos! by Christopher Butcher</a></iframe>
                         </div>
