changed Robin's Quest cover image

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white">Robin's Quest!</div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/portfolio/rq2.JPG" alt="In pixel art, there is a small room with a red haired character picking up a sword" />
+                            <img class="img-fluid" src="./assets/img/portfolio/rq_intro.png" alt="In pixel art, there is a small room with a red haired character picking up a sword" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -515,7 +515,10 @@
                                     <!-- <img class="img-fluid rounded mb-5" src="./assets/img/portfolio/rq2.JPG" alt="in pixel art there is a small room with a red haired character picking up a sword" /> -->
                                     <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
-                                          <div class="carousel-item active">
+                                            <div class="carousel-item active">
+                                                <img src="./assets/img/portfolio/rq5.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
+                                              </div>
+                                          <div class="carousel-item">
                                             <img src="./assets/img/portfolio/rq2.JPG" class="d-block w-100 rounded " alt="pixel art of a small town map">
                                           </div>
                                           <div class="carousel-item">
@@ -527,9 +530,7 @@
                                           <div class="carousel-item">
                                             <img src="./assets/img/portfolio/rq4.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
                                           </div>
-                                          <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/rq5.JPG" class="d-block w-100 rounded" alt="pixel art of a small town map">
-                                          </div>
+                                          
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
                                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
