--- a/index.html
+++ b/index.html
@@ -828,6 +828,12 @@
                                         <br><br>Below is an extended look at how I set up the FMOD Studio project, as well as some gameplay.
                                     </p>
                                     <iframe  class="iframeFix" style="border: 4px solid #e0f0df; border-radius: 4px;" src="https://www.youtube.com/embed/CQfkxlim5DA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+                                    
+                                    <h4>Learn More:</h4><p></p><p>
+                                        <a href="https://drive.google.com/file/d/11UE9i-khyPK3s-LPnB2rt4LzU8fN9AkA/view?usp=sharing" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Download for PC (.zip)
+                                    </button></a></p><br/>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
