--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <div class="col-lg-10 ml-auto twoColumns">
                         <div class="insideColumns">
                         <!-- <p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. </p><p class="lead">When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p> -->
-                        <p class="lead text-justify">Hello! I love music, video games, and learning new things. I have a background in music as well as game programming. </p>
-                        <p class="lead text-justify"><br>I've done a little bit of everything, from pixel art to shaders, writing game AI to writing story outlines, recording and implementing voice lines, and a bunch of stuff in between. I enjoy thinking about how each individual piece interacts with the others and working on a team to make it all sing.</p>
+                        <p class="lead text-justify">Hello! I enjoy writing and implementing code in every area of game design. I also use my background in music while doing technical audio, both in terms of adaptive music and sound design. I love learning new things and meeting new people, and both music and video games have provided me the opportunity to do so.</p>
+                        <p class="lead text-justify">I like thinking about how each individual piece interacts with the others and working on a team to make everything sing. Currently, I am wearing many hats while working on <i>Breach of Space</i> (AI programming, implementation, audio designer, composer).</p>
                         
                         </div>
                     </div>
@@ -183,12 +183,10 @@
                     <div class="col-lg-1"></div>
                     <div class="col-lg-10 ">
                         <div>
-                        <p class="lead text-justify" style="padding-bottom: 4rem;">I've played with orchestras, in jazz combos, 
-                        and even been on a couple of tours with a punk band. Now, I'm focusing on composing for 
-                        video games & sound design. Although upright bass is my primary instrument, I can play a 
-                        little bit of anything thanks to my degree in Instrumental Music Education. These days I write 
-                        mostly on guitar, bass, and keyboard. As for composing & recording, I use Reason 11, 
-                        ProTools, Adobe Audition, and FamiStudio.</p>
+                        <p class="lead text-justify" style="padding-bottom: 4rem;">Having both a degree in music and a degree in game design,
+                            I try to use both to inform the other. I am very interested in technical audio and adaptive soundtracks,
+                            working to create an interesting and unique experience for every player. I mostly use Reason 11 for composing, 
+                        ProTools and Adobe Audition for recording, and FMOD Studio for implementation.</p>
                         
                         </div>
                     </div>
