--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <br><br><br>
                 <h2 class="text-center mb-4">Download My Resume</h2>
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (11-2021).pdf">
+                    <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (Updated March 2022).pdf">
                         <i class="fas fa-download mr-2"></i>
                          PDF 
                     </a>
-                    <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (11-2021).docx">
+                    <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (Updated March 2022).docx">
                         <i class="fas fa-download mr-2"></i>
                         DOC
                     </a> 
@@ -290,11 +290,11 @@
                         <br>
                         <h3 class="text-center mb-4">Download My Resume</h3>
                         <div class="text-center mt-4">
-                            <a class="btn btn-xl btn-outline-dark" href="./assets/Christopher Butcher - Resume (11-2021).pdf">
+                            <a class="btn btn-xl btn-outline-dark" href="./assets/Christopher Butcher - Resume (Updated March 2022).pdf">
                                 <i class="fas fa-download mr-2"></i>
                                  PDF 
                             </a>
-                            <a class="btn btn-xl btn-outline-dark" href="./assets/Christopher Butcher - Resume (11-2021).docx">
+                            <a class="btn btn-xl btn-outline-dark" href="./assets/Christopher Butcher - Resume (Updated March 2022).docx">
                                 <i class="fas fa-download mr-2"></i>
                                 DOC
                             </a> 
