--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/customStyles.css" rel="stylesheet" />
+
+        <!--THIS IS ALL ICON STUFF!-->
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+        <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+        <meta name="application-name" content="&nbsp;"/>
+        <meta name="msapplication-TileColor" content="#FFFFFF" />
+        <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+        <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+        <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+        <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+        <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+        <!--    END ICON STUFF!    -->
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -54,7 +77,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <h3 id="to-here">Game Programmer & Audio Designer</h3>
+                <h3 id="to-here">Game Programmer & Sound Designer</h3>
             </div>
         </header>
         <!-- About Section-->
@@ -75,7 +98,7 @@
                         <div class="insideColumns">
                         <!-- <p class="lead">Hello! My name is Christopher Butcher, and I am a Game Programmer, Sound Designer, & Composer. As a programmer, I enjoy trying to solve any problem provided by my design team, looking for new ways to enhance the program and make the code more efficient. </p><p class="lead">When writing music and mixing sound effects, my main goal is to immerse the player in the game world without overwhelming them. This is made possible through middleware implementation, combining my passion for both music and code. </p><p class="lead">Currently, I am honing these skills on <i>Breach of Space</i> as both Sound Design Lead & a founding member of the programming team. In <i>Breach of Space</i>, you must defeat the evil corporation that is taking over your home planet. Stealthily distract, sabotage, and cause enough mayhem for the robotic staff to leave your home among the stars for good. </p> -->
                         <p class="lead text-justify">Hello! I enjoy writing and implementing code in every area of game design. I also use my background in music while doing technical audio, both in terms of adaptive music and sound design. I love learning new things and meeting new people, and both music and video games have provided me the opportunity to do so.</p>
-                        <p class="lead text-justify">I like thinking about how each individual piece interacts with the others and working on a team to make everything sing. Currently, I am wearing many hats while working on <i>Breach of Space</i> (AI programming, implementation, audio designer, composer).</p>
+                        <p class="lead text-justify">I like thinking about how each individual piece interacts with the others and working on a team to make everything sing. Currently, I am wearing many hats while working on <i>Breach of Space</i> (AI programming, implementation, sound designer, composer).</p>
                         
                         </div>
                     </div>
