Couple of spelling fixes.

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            United States
+                            Midwest, 
+                             United States
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -433,14 +434,14 @@
                                         is taking over your home planet. Stealthily distract, sabotage, and cause enough 
                                         mayhem for the robotic staff to leave your home among the stars for good. </i>
                                     <br><br>
-                                        On <i>Breach of Space</i> I serve as sound designer, composer, & AI programmer. <i>Breach of Space</i> is currently slated for release in early 2022. <i>Breach of Space</i> is made in Unity with FMOD Studio integration.
+                                        On <i>Breach of Space</i> I served as programmer (mostly focused on AI), sound designer, & composer. <i>Breach of Space</i> is currently slated for release in early 2022. <i>Breach of Space</i> is made in Unity with FMOD Studio integration.
                                     </p>
                                     <h4>Design</h4><p></p>
                                     <p class="mb-5 text-left">
                                         <i>Breach of Space</i> has gone through many forms on its way to being a stealth game. For the very first iteration, <i>Breach of Space</i> was a procedurally generated multi-user dungeon crawler. I implemented code that would produce a randomized dungeon of prefab rooms linking up at their doors. I also learned the coding basics of putting our game online for multiplayer. Starting in this version and continuing throughout, I have been in charge of our repositories (Bitbucket & Git LFS), prototyping, and much of the in-engine implementation (shaders, UI, prefabs, animations).
                                     <br><br>
                                         In its next iteration, <i>Breach of Space</i> was a management simulator with a unique viewpoint: a console of monitors in an office at the habitat. I began work on a system for controlling multiple robot workers and various objects from the screen-in-a-screen setup of this iteration. This system linked into our in-game shop and would eventually be involved in your interactions with your boss. I also created the typing minigame that mimics the robot workers’ typing on malfunctioning equipment, as well as a mock-instant messenger app to communicate with the robots and your superiors.
-                                        <br><br>Finally, <i>Breach of Space</i> became the stealth game it currently is today. My priority for much of this iteration has been the AI relating to the Robot enemies & their Waypoints, as well as recording and implementing the adaptive audio soundtsrack and sound effects for the game.
+                                        <br><br>Finally, <i>Breach of Space</i> became the stealth game it currently is today. My priority for much of this iteration has been the AI relating to the Robot enemies & their Waypoints, as well as recording and implementing the adaptive audio soundtrack and sound effects for the game.
                                     </p>
 
                                     <h4>Waypoint Behavior</h4><p></p>
