Updated BOS carousel images.

--- a/index.html
+++ b/index.html
@@ -395,10 +395,13 @@
                                             <img src="./assets/img/portfolio/bos3.png" class="d-block w-100 img-fluid rounded mb-5" alt="robots in a sci-fi lab">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/bos1.jpg" class="d-block w-100 img-fluid rounded mb-5" alt="robots in a sci-fi lab">
+                                            <img src="./assets/img/portfolio/bos_new01.png" class="d-block w-100 img-fluid rounded mb-5" alt="robots and camera beam">
                                           </div>
                                           <div class="carousel-item">
-                                            <img src="./assets/img/portfolio/bos_01.png" class="d-block w-100 img-fluid rounded mb-5" alt="robotsin a sci-fi lab">
+                                            <img src="./assets/img/portfolio/bos_new02.png" class="d-block w-100 img-fluid rounded mb-5" alt="dark corridor with spooky light">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="./assets/img/portfolio/bos_new03.png" class="d-block w-100 img-fluid rounded mb-5" alt="sneaking up on evil robot">
                                           </div>
                                           
                                         </div>
