Updated buttons on Breach of Space section.

--- a/index.html
+++ b/index.html
@@ -419,17 +419,21 @@
                                         <i class="fa-times fa-fw"></i>
                                         Personal Contributions
                                     </button></a><p></p> -->
-                                        <a href="https://sites.google.com/iu.edu/breachofspace/home" target="blank"><button class="btn btn-primary">
+                                        <a href="https://calcitegames.itch.io/breach-of-space" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Design Wiki
-                                    </button></a>
+                                        Release Page (Itch.io)
+                                    </button></a><br>
                                     <a href="https://youtu.be/i_7PSSTxKnA" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Teaser Trailer
+                                        Trailer
                                     </button></a>
-                                    <a href="https://gitlab.com/chrbutch/breach-of-space-final" target="blank"><button class="btn btn-primary">
+                                    <a href="https://christopherbutcher.bandcamp.com/album/breach-of-space" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
-                                        Repository
+                                        Soundtrack
+                                    </button></a>
+                                    <a href="https://calcitegames.wixsite.com/website/post/it-s-time-to-show-off-10-portfolio-tips-to-make-you-shine" target="blank"><button class="btn btn-primary">
+                                        <i class="fa-times fa-fw"></i>
+                                        Devlog
                                     </button></a>
                                     </p><br/>
                                     <p class="mb-5 text-left">
