--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                                         <a href="https://calcitegames.itch.io/breach-of-space" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         Release Page (Itch.io)
-                                    </button></a><br>
+                                    </button></a><br><br>
                                     <a href="https://youtu.be/i_7PSSTxKnA" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         Trailer
@@ -441,7 +441,7 @@
                                         is taking over your home planet. Stealthily distract, sabotage, and cause enough 
                                         mayhem for the robotic staff to leave your home among the stars for good. </i>
                                     <br><br>
-                                        On <i>Breach of Space</i> I served as programmer (mostly focused on AI), sound designer, & composer. <i>Breach of Space</i> is currently slated for release in early 2022. <i>Breach of Space</i> is made in Unity with FMOD Studio integration.
+                                        On <i>Breach of Space</i> I served as programmer (mostly focused on AI), sound designer, & composer. <i>Breach of Space</i> is made in Unity with FMOD Studio integration and was released on itch.io on March 11th, 2022.
                                     </p>
                                     <h4>Design</h4><p></p>
                                     <p class="mb-5 text-left">
