--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                       </div><br>
                                     <!-- Portfolio Modal - Text-->
                                     <h4>Play the Game:</h4><p></p><p>
-                                        <a href="https://chrbutch.pages.iu.edu/Codetta/" target="blank"><button class="btn btn-primary">
+                                        <a href="https://chrstphrbtchr.itch.io/codetta" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         <i>Codetta</i><br>(playable in browser)
                                     </button></a></p><br/>
