--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                                         the layout for the game. Fonts & original sound effects were found online under the 
                                         CC0 license. My idea for the game focused on outliving your perceived obsolescence, and 
                                         how important it is to find a community you feel comfortable in. It was my first time using Construct 3,
-                                    but I enjoyed learning to use an engine I was not familiar with.
+                                        which I have become more familiar with over time as both an educational and prototyping tool.
                                     
                                     </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
