--- a/index.html
+++ b/index.html
@@ -544,11 +544,13 @@
                                         </a>
                                       </div><br>
                                     <!-- Portfolio Modal - Text-->
+                                    <!--
                                     <h4>Play the Game:</h4><p></p><p>
                                         <a href="https://chrstphrbtchr.itch.io/codetta" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         <i>Codetta</i><br>(playable in browser)
-                                    </button></a></p><br/>
+                                    </button></a></p>--><br/>
+                                    <iframe src="https://itch.io/embed/3491529" width="552" height="167" frameborder="0"><a href="https://chrstphrbtchr.itch.io/codetta">Codetta by Christopher Butcher</a></iframe>
                                     <p class="mb-5 text-left"><i>In</i> Codetta<i>, you play as a discarded reel-to-reel player 
                                         in a world without music. You must guide your character through the 1-bit world to save 
                                         the forgotten instruments from slimes & bring them together. </i><br><br>
