--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <h3 id="to-here">Game Programmer & Sound Designer</h3>
+                <h7 id="to-here">(<i>among other things</i>)</h6>
             </div>
         </header>
         <!-- About Section-->
@@ -110,7 +111,7 @@
                 </div>
                 <!-- About Section Button-->
                 <br><br><br>
-                <h2 class="text-center mb-4">Download My Resume</h2>
+                <h2 class="text-center mb-4">Resume</h2>
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="./assets/Christopher Butcher - Resume (Updated April 2025).pdf">
                         <i class="fas fa-download mr-2"></i>
@@ -314,7 +315,7 @@
                         </div>
                         <!-- About Section Button-->
                         <br>
-                        <h3 class="text-center mb-4">Download My Resume</h3>
+                        <h3 class="text-center mb-4">Resume</h3>
                         <div class="text-center mt-4">
                             <a class="btn btn-xl btn-outline-dark" href="./assets/Christopher Butcher - Resume (Updated April 2025).pdf">
                                 <i class="fas fa-download mr-2"></i>
