--- a/index.html
+++ b/index.html
@@ -554,7 +554,8 @@
                                         <i class="fa-times fa-fw"></i>
                                         <i>Codetta</i><br>(playable in browser)
                                     </button></a></p>--><br/>
-                                    <iframe src="https://itch.io/embed/3491529" width="552" height="167" frameborder="0"><a href="https://chrstphrbtchr.itch.io/codetta">Codetta by Christopher Butcher</a></iframe>
+                                    <iframe frameborder="0" src="https://itch.io/embed/3491529?bg_color=190027&amp;fg_color=e3ffeb&amp;link_color=e53b44&amp;border_color=493057" width="552" height="167"><a href="https://chrstphrbtchr.itch.io/codetta">Codetta by Christopher Butcher</a></iframe>
+                                    <!--<iframe src="https://itch.io/embed/3491529" width="552" height="167" frameborder="0"><a href="https://chrstphrbtchr.itch.io/codetta">Codetta by Christopher Butcher</a></iframe>-->
                                     <p class="mb-5 text-left"><i>In</i> Codetta<i>, you play as a discarded reel-to-reel player 
                                         in a world without music. You must guide your character through the 1-bit world to save 
                                         the forgotten instruments from slimes & bring them together. </i><br><br>
@@ -824,6 +825,7 @@
                                       </div>
                                     <!-- Portfolio Modal - Text-->
                                     <br>
+                                        <iframe frameborder="0" src="https://itch.io/embed-upload/13804583?color=327345" allowfullscreen="" width="640" height="460"><a href="https://chrstphrbtchr.itch.io/gridworld">Play GRIDWORLD on itch.io</a></iframe>
                                         <a href="https://bitbucket.org/christopherbutcher/gridworld/src/master/" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
                                         Source Code (via Bitbucket)
@@ -924,6 +926,7 @@
                                         </a>
                                       </div>  -->
                                     <!-- Portfolio Modal - Text-->
+                                    <iframe frameborder="0" src="https://itch.io/embed/3590156?dark=true" width="552" height="167"><a href="https://chrstphrbtchr.itch.io/survival-shooter">Survival Shooter FMOD Project 2021 by Christopher Butcher</a></iframe>
                                     <h4>Download:</h4><p></p><p>
                                         <a href="https://drive.google.com/file/d/11UE9i-khyPK3s-LPnB2rt4LzU8fN9AkA/view?usp=sharing" target="blank"><button class="btn btn-primary">
                                         <i class="fa-times fa-fw"></i>
